<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Calculadora_Pro_Activity"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/ShowResul"
            style="@style/TEXT_EDITOR"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:ems="10"
            android:inputType="number"
            android:padding="10dp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            style="@style/BUTTON_NUM"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:text="@string/botton1" />

        <Button
            android:id="@+id/button2"
            style="@style/BUTTON_NUM"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:text="@string/botton2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button3"
            style="@style/BUTTON_NUM"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:text="@string/botton3"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonSum"
            style="@style/BUTTON_SIGN"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bottonSum" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:layout_margin="15dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button4"
            style="@style/BUTTON_NUM"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:text="@string/botton4" />

        <Button
            android:id="@+id/button5"
            style="@style/BUTTON_NUM"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="12dp"
            android:layout_weight="1"

            android:text="@string/botton5" />

        <Button
            android:id="@+id/button6"
            style="@style/BUTTON_NUM"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="12dp"
            android:layout_weight="1"

            android:text="@string/botton6" />

        <Button
            android:id="@+id/buttonRes"
            style="@style/BUTTON_SIGN"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bottonRes" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:layout_margin="15dp"
        android:backgroundTint="@color/gray_black"

        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/BUTTON_NUM"
            android:layout_marginRight="12dp"

            android:text="@string/botton7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/BUTTON_NUM"
            android:layout_marginRight="12dp"

            android:text="@string/botton8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/BUTTON_NUM"
            android:layout_marginRight="12dp"

            android:text="@string/botton9" />

        <Button
            android:id="@+id/buttonMul"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/BUTTON_SIGN"
            android:paddingTop="15dp"
            android:text="@string/bottonMul" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:layout_margin="15dp"

        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonC"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            style="@style/BUTTON_NUM"
            android:textColor="@color/orange"
            android:text="@string/bottonC" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="12dp"
            android:layout_weight="1"

            style="@style/BUTTON_NUM"
            android:text="@string/botton0" />

        <Button
            android:id="@+id/buttonIgual"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            style="@style/BUTTON_SIGN"
            android:text="@string/bottonIgual" />

        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/BUTTON_SIGN"
            android:text="@string/bottonDiv" />
    </LinearLayout>
</LinearLayout>